fix broken layout on homepage

--- a/app/assets/stylesheets/statuses.scss
+++ b/app/assets/stylesheets/statuses.scss
@@ -77,6 +77,11 @@ label{
   }
 }
 
+.student-list .status{
+  height: 35px;
+  overflow:hidden;
+}
+
 .status{
   position:relative;
   padding:.25em .5em .5em 30px;
